# EchoClip

./: .gitignore  Cargo.toml  README.md
apps/echoclip/: README.md  pubspec.yaml
apps/echoclip/android/: .gitignore  gradle.properties
apps/echoclip/android/app/: build.gradle.kts
apps/echoclip/android/app/src/main/: AndroidManifest.xml
apps/echoclip/android/app/src/main/kotlin/com/echoclip/echoclip/: MainActivity.kt  RecordingStorage.kt  ReplayForegroundService.kt  RustAudioCore.kt
apps/echoclip/android/app/src/main/res/values/: colors.xml
apps/echoclip/lib/: main.dart
apps/echoclip/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
apps/echoclip/test/: widget_test.dart
apps/echoclip/windows/: CMakeLists.txt
apps/echoclip/windows/runner/: Runner.rc  main.cpp
apps/windows_demo/: Cargo.toml
apps/windows_demo/src/: main.rs
crates/echoclip_android_jni/: Cargo.toml
crates/echoclip_android_jni/src/: lib.rs
crates/echoclip_core/: Cargo.toml
crates/echoclip_core/src/: lib.rs
docs/: DEVELOPMENT_ROADMAP.md  ICON_DESIGN.md  rust-core.md
scripts/: build_android_ffmpeg.ps1  build_android_rust.ps1  prepare_android_ffmpeg_sources.ps1
